--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-security</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>com.hierynomus</groupId>
+		<artifactId>sshj</artifactId>
+		<version>0.38.0</version>
+	</dependency>
 
 	<dependency>
 		<groupId>com.mysql</groupId>
